[DG2] cdclk state doesn't match
[ 1963.606530] xe 0000:03:00.0: cdclk state doesn't match!
[ 1963.606587] WARNING: CPU: 1 PID: 1445 at drivers/gpu/drm/i915/display/intel_cdclk.c:2275 intel_set_cdclk+0x4c1/0x7f0 [xe]
[ 1963.606848] Modules linked in: xe(+) drm_ttm_helper ttm video gpu_sched i2c_algo_bit drm_suballoc_helper drm_display_helper drm_kms_helper syscopyarea sysfillrect sysimgblt drm_buddy drm drm_panel_orientation_quirks cfbfillrect cfbimgblt cfbcopyarea fb fbdev fuse xt_conntrack xt_MASQUERADE nf_conntrack_netlink nfnetlink xt_addrtype iptable_filter br_netfilter xt_REDIRECT iptable_nat nf_nat nf_conntrack nf_defrag_ipv6 nf_defrag_ipv4 overlay x86_pkg_temp_thermal coretemp mei_pxp kvm_intel mei_hdcp wmi_bmof mxm_wmi btusb btrtl kvm btbcm irqbypass btintel crct10dif_pclmul crc32_pclmul bluetooth ecdh_generic ghash_clmulni_intel ecc mei_me mei wmi ip_tables x_tables e1000e ptp i2c_i801 pps_core i2c_smbus [last unloaded: drm_panel_orientation_quirks]
[ 1963.607233] CPU: 1 PID: 1445 Comm: modprobe Tainted: G U W 6.1.0-xe-demarchi+ #2
[ 1963.607243] Hardware name: Gigabyte Technology Co., Ltd. GB-Z390 Garuda/GB-Z390 Garuda-CF, BIOS IG1b 09/10/2019
[ 1963.607250] RIP: 0010:intel_set_cdclk+0x4c1/0x7f0 [xe]
[ 1963.607504] Code: 48 85 d2 0f 84 3b 03 00 00 4c 89 ff 48 89 54 24 10 e8 43 20 1a e1 48 8b 54 24 10 48 c7 c7 a0 e0 b7 a0 48 89 c6 e8 d8 99 8b e1 <0f> 0b 48 8b 7c 24 08 e8 43 78 9b e0 48 8d bb 9c ec 00 00 44 0f b6
[ 1963.607513] RSP: 0018:ffff888140e0f290 EFLAGS: 00010286
[ 1963.607525] RAX: 0000000000000000 RBX: ffff88817d6e0000 RCX: 0000000000000000
[ 1963.607533] RDX: 0000000000000001 RSI: ffffffff81156574 RDI: ffffed10281c1e42
[ 1963.607541] RBP: ffff88813a4266ac R08: 0000000000000001 R09: ffff88885d8b77eb
[ 1963.607548] R10: ffffed110bb16efd R11: 0000000000000001 R12: ffff88817d6eec94
[ 1963.607555] R13: ffff88817d6e0008 R14: ffff88817d6eec98 R15: ffff88811b51c0d0
[ 1963.607563] FS: 00007f9d68a72740(0000) GS:ffff88885d880000(0000) knlGS:0000000000000000
[ 1963.607571] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 1963.607579] CR2: 00007f3634370948 CR3: 000000014ae6e002 CR4: 00000000003706e0
[ 1963.607586] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[ 1963.607593] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
[ 1963.607600] Call Trace:
[ 1963.607607] <TASK>
[ 1963.607638] intel_atomic_commit_tail+0x1176/0x1fb0 [xe]
[ 1963.607899] ? lockdep_hardirqs_on_prepare+0x124/0x230
[ 1963.607913] ? _raw_spin_unlock_irqrestore+0x53/0x80
[ 1963.607992] ? intel_modeset_get_crtc_power_domains+0x3f0/0x3f0 [xe]
[ 1963.608275] ? __module_address+0x96/0x100
[ 1963.608288] ? preempt_count_sub+0x14/0xc0
[ 1963.608299] ? is_module_address+0x2b/0x50
[ 1963.608311] ? static_obj+0x6b/0x80
[ 1963.608333] ? intel_atomic_commit+0x574/0x5d0 [xe]
[ 1963.608587] ? intel_atomic_commit+0x4ed/0x5d0 [xe]
[ 1963.608841] intel_atomic_commit+0x574/0x5d0 [xe]
[ 1963.609215] ? intel_atomic_commit_tail+0x1fb0/0x1fb0 [xe]
[ 1963.609475] drm_atomic_commit+0x132/0x190 [drm]
[ 1963.609603] ? drm_atomic_print_new_state+0x280/0x280 [drm]
[ 1963.609727] ? drm_plane_get_damage_clips.cold+0x27/0x27 [drm]
[ 1963.609867] ? drm_atomic_get_crtc_state+0x1bf/0x1f0 [drm]
[ 1963.610071] intel_initial_commit+0x30d/0x350 [xe]
[ 1963.610340] ? intel_async_flip_vtd_wa+0x180/0x180 [xe]
[ 1963.610629] ? add_dr+0xcc/0xe0 [drm]
[ 1963.610769] ? gt_ttm_mgr_init+0x1a0/0x1a0 [xe]
[ 1963.611066] ? __drmm_add_action+0xd5/0x130 [drm]
[ 1963.611210] intel_modeset_init+0x30/0x90 [xe]
[ 1963.611468] xe_device_probe+0x2fb/0x350 [xe]
[ 1963.611713] xe_pci_probe+0x8aa/0xa10 [xe]
[ 1963.612047] pci_device_probe+0xf9/0x200
[ 1963.612069] really_probe+0x13b/0x530
[ 1963.612091] __driver_probe_device+0xca/0x210
[ 1963.612109] driver_probe_device+0x4a/0xf0
[ 1963.612123] __driver_attach+0x135/0x290
[ 1963.612139] ? __device_attach_driver+0x160/0x160
[ 1963.612151] bus_for_each_dev+0xf9/0x160
[ 1963.612163] ? subsys_dev_iter_exit+0x10/0x10
[ 1963.612196] bus_add_driver+0x29c/0x2f0
[ 1963.612220] driver_register+0x10d/0x1a0
[ 1963.612233] ? xe_hw_fence_module_init+0x35/0x35 [xe]
[ 1963.612475] do_one_initcall+0xce/0x3f0
[ 1963.612488] ? trace_event_raw_event_initcall_level+0x170/0x170
[ 1963.612521] ? kasan_unpoison+0x23/0x50
[ 1963.612544] do_init_module+0xe4/0x320
[ 1963.612566] load_module+0x331e/0x3560
[ 1963.612635] ? module_frob_arch_sections+0x20/0x20
[ 1963.612662] ? kernel_read_file+0x2fe/0x3f0
[ 1963.612741] ? __do_sys_finit_module+0x10d/0x1b0
[ 1963.612753] __do_sys_finit_module+0x10d/0x1b0
[ 1963.612766] ? __do_sys_init_module+0x1f0/0x1f0
[ 1963.612820] ? mark_held_locks+0x24/0x90
[ 1963.612837] ? lockdep_hardirqs_on_prepare+0x124/0x230
[ 1963.612849] ? syscall_enter_from_user_mode+0x1c/0x50
[ 1963.612871] do_syscall_64+0x37/0x90
[ 1963.612884] entry_SYSCALL_64_after_hwframe+0x63/0xcd
[ 1963.612894] RIP: 0033:0x7f9d6852673d
[ 1963.612902] Code: 00 c3 66 2e 0f 1f 84 00 00 00 00 00 90 f3 0f 1e fa 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 23 37 0d 00 f7 d8 64 89 01 48
[ 1963.612911] RSP: 002b:00007ffe6a9b17e8 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
[ 1963.612924] RAX: ffffffffffffffda RBX: 000055730dc5d3c0 RCX: 00007f9d6852673d
[ 1963.612931] RDX: 0000000000000000 RSI: 000055730dc5ea00 RDI: 0000000000000016
[ 1963.612963] RBP: 0000000000040000 R08: 0000000000000000 R09: 0000000000000000
[ 1963.612994] R10: 0000000000000016 R11: 0000000000000246 R12: 000055730dc5ea00
[ 1963.613001] R13: 0000000000000000 R14: 000055730dc55500 R15: 000055730dc5d3c0
[ 1963.613059] </TASK>
Tested on DG2, commit fe93b2c0 ("drm/xe/rtp: Support multiple actions per entry")