drm/xe/display: Fix Alderlake-P and DG2 display info

DG2 has cdclk squash, without which we calculate the CDCLK wrongly.
Alderlake-P is LPD, not gen 12 display.

Signed-off-by: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
Closes: https://gitlab.freedesktop.org/drm/xe/kernel/-/issues/210
Reviewed-by: Thomas Hellström <thomas.hellstrom@linux.intel.com>