drivers/gpu/drm/xe/xe_display.c
@@ -488,10 +488,16 @@ void xe_display_info_init(struct xe_device *xe)
 		xe->info.display = (struct xe_device_display_info) { GEN12_DISPLAY };
 		break;
 	case XE_ALDERLAKE_S:
-	case XE_ALDERLAKE_P:
 		xe->info.display = (struct xe_device_display_info) {
 			GEN12_DISPLAY,
 			.has_hti = 1,
+			.has_psr_hw_tracking = 0,
+		};
+		break;
+	case XE_ALDERLAKE_P:
+		xe->info.display = (struct xe_device_display_info) {
+			XE_LPD,
+			.has_cdclk_crawl = 1,
 			.has_psr_hw_tracking = 0,
 		};
 		break;
@@ -501,6 +507,7 @@ void xe_display_info_init(struct xe_device *xe)
 			.cpu_transcoder_mask =
 				BIT(TRANSCODER_A) | BIT(TRANSCODER_B) |
 				BIT(TRANSCODER_C) | BIT(TRANSCODER_D),
+			.has_cdclk_squash = 1,
 		};
 		break;
 	case XE_METEORLAKE:
